--- a/canva/src/styles/global.css
+++ b/canva/src/styles/global.css
@@ -10,4 +10,5 @@
   --border-btn-transparent: rgba(66, 66, 66, 0.4);
   --text-btn-transparent: rgba(0, 0, 0, 0.4);
   --black: #000000;
+  --white: #FFFFFF;
 }
