--- a/canva/src/components/post-it/style.css
+++ b/canva/src/components/post-it/style.css
@@ -7,10 +7,41 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 4%;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* Adiciona transição suave para a mudança de cor de fundo */
+}
+
+#postIt-container:hover {
+  background-color: var(--postit-hover);
 }
 
 #postIt-content {
   font-size: 12px;
+}
+
+#btn-delete-postIt {
+  margin-bottom: 4%;
+  border-radius: 0;
+  border: 1px solid var(--black);
+  border-top: none;
+  background-color: var(--red);
+  width: 80%;
+  padding: 1%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  /* Adiciona transição suave para a mudança de opacidade */
+}
+
+#btn-delete-postIt.visible {
+  opacity: 1;
+}
+
+#btn-delete-postIt.hidden {
+  opacity: 0;
+}
+
+#btn-delete-postIt:hover {
+  background-color: var(--dark-red);
+  cursor: pointer;
 }
