--- a/src/components/post-it/style.css
+++ b/src/components/post-it/style.css
@@ -1,5 +1,9 @@
-#postIt-container {
+#postIt-main-container {
   width: 80%;
+}
+
+#postIt-container {
+  width: 100%;
   background-color: var(--postit-color);
   border: 1.5px solid var(--black);
   padding: 2%;
@@ -26,7 +30,7 @@
   border: 1px solid var(--black);
   border-top: none;
   background-color: var(--red);
-  width: 80%;
+  width: 100%;
   padding: 1%;
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -44,4 +48,15 @@
 #btn-delete-postIt:hover {
   background-color: var(--dark-red);
   cursor: pointer;
+}
+
+#canva-container-bottom div div #postIt-main-container {
+  width: 27%;
+}
+
+#canva-container-bottom div div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
